Resolves: fdo#52013 use vector::insert instead

Change-Id: I3cbc0c0751c069ff9bc7d8b1b737fcfdc3be2b9d